Feat: Resolve memory leak

--- a/eqprop/notebooks/profile.ipynb
+++ b/eqprop/notebooks/profile.ipynb
@@ -1,45 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "x = torch.rand((2, 1), requires_grad=False)\n",
-    "y = torch.rand((2, 1))\n",
-    "\n",
-    "f = torch.sum(x + y)\n",
-    "x.requires_grad = True\n",
-    "f.backward()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "6 << 1"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Torch"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### buffer"
+    "# Memory Leakage"
    ]
   },
   {
@@ -48,59 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "import gc\n",
     "\n",
-    "mdl = torch.nn.Linear(1, 1)\n",
-    "mdl.register_buffer(\"free_node\", torch.rand((2, 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for buf in mdl.buffers():\n",
-    "    print(id(buf))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdl.bias"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## nograd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import torch\n",
     "\n",
     "\n",
-    "@torch.no_grad()\n",
-    "def foo(x, y):\n",
-    "    x.grad = torch.ones_like(x)\n",
-    "    return x + bar(x, y)\n",
-    "\n",
-    "\n",
-    "def bar(x, y):\n",
-    "    return x + 2 * y\n",
-    "\n",
-    "\n",
-    "x, y = torch.rand((2, 1), requires_grad=True), torch.rand((2, 1))\n",
-    "z = foo(x, y)"
+    "def memReport():\n",
+    "    cnt = 0\n",
+    "    for obj in gc.get_objects():\n",
+    "        if torch.is_tensor(obj):\n",
+    "            obj: torch.Tensor\n",
+    "            print(type(obj), obj.size())\n",
+    "            cnt += 1\n",
+    "    print(\"total number of tensors: \", cnt)"
    ]
   },
   {
@@ -109,55 +34,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@torch.no_grad()\n",
-    "def baz(x: torch.tensor):\n",
-    "    return x.clone().detach().requires_grad_(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "baz(torch.tensor([1.0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = torch.rand((2, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.grad = torch.ones_like(x)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## pytest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipytest\n",
+    "import os\n",
     "\n",
-    "ipytest.autoconfig()"
+    "import psutil\n",
+    "\n",
+    "\n",
+    "def cpuStats():\n",
+    "    psutil.virtual_memory()\n",
+    "    pid = os.getpid()\n",
+    "    py = psutil.Process(pid)\n",
+    "    memoryUse = py.memory_info()[0] / 2.0**20\n",
+    "    print(\"memory in MB:\", memoryUse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpuStats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i \"../src/train.py\" \"debug=fdr\" \"trainer.fast_dev_run=100\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For comparison\n",
+    "%run -i \"../src/train.py\" \"debug=fdr\" \"model=mnist_ann\" \"trainer.fast_dev_run=100\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memReport()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpuStats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memReport()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpuStats()"
    ]
   },
   {
@@ -184,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
