Feat: Change OTS to polynomial approx model

--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -2,28 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
+    "import sys\n",
     "\n",
-    "x = torch.rand((2, 1), requires_grad=False)\n",
-    "y = torch.rand((2, 1))\n",
-    "\n",
-    "f = torch.sum(x + y)\n",
-    "x.requires_grad = True\n",
-    "f.backward()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "6 << 1"
+    "sys.path.append(\"../\")"
    ]
   },
   {
@@ -74,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,6 +152,135 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/workspace/EP2/.venv/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3483.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "logsumexp() received an invalid combination of arguments - got (tuple, dim=int), but expected one of:\n * (Tensor input, tuple of ints dim, bool keepdim, *, Tensor out)\n * (Tensor input, tuple of names dim, bool keepdim, *, Tensor out)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m y \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mlinspace(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m)\n\u001b[1;32m      7\u001b[0m xy \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mmeshgrid(x, y)\n\u001b[0;32m----> 8\u001b[0m logsumexp \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mlogsumexp(xy, dim\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m)\n\u001b[1;32m      9\u001b[0m plt\u001b[39m.\u001b[39mplot3d(xy, logsumexp)\n",
+      "\u001b[0;31mTypeError\u001b[0m: logsumexp() received an invalid combination of arguments - got (tuple, dim=int), but expected one of:\n * (Tensor input, tuple of ints dim, bool keepdim, *, Tensor out)\n * (Tensor input, tuple of names dim, bool keepdim, *, Tensor out)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# plot 3d logsumexp\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x = torch.linspace(-1, 1, 10)\n",
+    "y = torch.linspace(-1, 1, 10)\n",
+    "xy = torch.meshgrid(x, y)\n",
+    "logsumexp = torch.logsumexp(xy, dim=0)\n",
+    "plt.plot3d(xy, logsumexp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = torch.rand((7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils import eqprop_util"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = 64\n",
+    "I = O = 1000\n",
+    "a = torch.rand((B, I))\n",
+    "b = torch.rand((B, O))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "187 ms ± 22.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "eqprop_util.deltaV(b,a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207 ms ± 22.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "eqprop_util.deltaV(b,a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -c python -m foo.py cProfile"
+   ]
   }
  ],
  "metadata": {
@@ -184,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
+   "version": "3.11.0rc1"
   },
   "vscode": {
    "interpreter": {
