--- a/eqprop/notebooks/profile.ipynb
+++ b/eqprop/notebooks/profile.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,6 +122,75 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Custom profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lightning.pytorch.profilers import SimpleProfiler\n",
+    "import torch\n",
+    "\n",
+    "prof = SimpleProfiler()\n",
+    "def foo(x,y):\n",
+    "    with prof.profile(\"foo\"):\n",
+    "        return x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4., 6.])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(torch.Tensor([1,2]), torch.Tensor([3,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Profiler Report\n",
+      "\n",
+      "------------------------------------------------------------------------------------------------------------------\n",
+      "|  Action\t|  Mean duration (s)\t|  Num calls      \t|  Total time (s) \t|  Percentage %   \t|\n",
+      "------------------------------------------------------------------------------------------------------------------\n",
+      "|  Total\t|  -              \t|  1              \t|  21.582         \t|  100 %          \t|\n",
+      "------------------------------------------------------------------------------------------------------------------\n",
+      "|  foo\t|  0.012261       \t|  1              \t|  0.012261       \t|  0.056811       \t|\n",
+      "------------------------------------------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prof.summary())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -144,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
