--- a/eqprop/notebooks/profile.ipynb
+++ b/eqprop/notebooks/profile.ipynb
@@ -126,66 +126,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# grad norm track"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# log second gradient norm of the model\n",
+    "%run -i \"../src/train.py\" \"+trainer.limit_train_batches=0.2\" \"+trainer.limit_val_batches=0.2\" \"+trainer.limit_test_batches=0.2\" \"+trainer.track_grad_norm=2\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Custom profiler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from lightning.pytorch.profilers import SimpleProfiler\n",
-    "import torch\n",
     "\n",
     "prof = SimpleProfiler()\n",
-    "def foo(x,y):\n",
+    "\n",
+    "\n",
+    "def foo(x, y):\n",
     "    with prof.profile(\"foo\"):\n",
-    "        return x+y"
+    "        return x + y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([4., 6.])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "foo(torch.Tensor([1,2]), torch.Tensor([3,4]))"
+    "foo(torch.Tensor([1, 2]), torch.Tensor([3, 4]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Profiler Report\n",
-      "\n",
-      "------------------------------------------------------------------------------------------------------------------\n",
-      "|  Action\t|  Mean duration (s)\t|  Num calls      \t|  Total time (s) \t|  Percentage %   \t|\n",
-      "------------------------------------------------------------------------------------------------------------------\n",
-      "|  Total\t|  -              \t|  1              \t|  21.582         \t|  100 %          \t|\n",
-      "------------------------------------------------------------------------------------------------------------------\n",
-      "|  foo\t|  0.012261       \t|  1              \t|  0.012261       \t|  0.056811       \t|\n",
-      "------------------------------------------------------------------------------------------------------------------\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(prof.summary())"
    ]
