--- a/eqprop/notebooks/configtest.ipynb
+++ b/eqprop/notebooks/configtest.ipynb
@@ -25,8 +25,8 @@
     "import omegaconf\n",
     "import pyrootutils\n",
     "\n",
-    "root = pyrootutils.setup_root(\"/root/workspace/EP2\", pythonpath=True)\n",
-    "cfg = omegaconf.OmegaConf.load(root / \"configs\" / \"model\" / \"mnist_eqprop.yaml\")"
+    "# root = pyrootutils.setup_root(\"/root/workspace/EP2\", pythonpath=True)\n",
+    "cfg = omegaconf.OmegaConf.load(\"../configs/callbacks/eqprop_track.yaml\")"
    ]
   },
   {
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import hydra\n",
+    "from hydra.utils import instantiate\n",
     "\n",
-    "hydra.instan(cfg)"
+    "instantiate(cfg)"
    ]
   },
   {
@@ -241,11 +241,27 @@
     "def test_clip_weights(eqprop_model):\n",
     "    assert (eqprop_model.net.w.abs() <= 1).all()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instantiate the config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('EP')",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -259,11 +275,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "90e4321df57dcdaa38923c918cbc297c2df4b63e34e944f71f9cbb193a1f4ded"
+    "hash": "2a46654922a4325f3c08572184af70d13caa3bc46da3b244c5f3d5e106718b6a"
    }
   }
  },
