--- a/eqprop/notebooks/profile.ipynb
+++ b/eqprop/notebooks/profile.ipynb
@@ -153,6 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch  # noqa\n",
     "from lightning.pytorch.profilers import SimpleProfiler\n",
     "\n",
     "prof = SimpleProfiler()\n",
@@ -205,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
