Feat: Add benchmark notebook

--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -116,7 +116,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ep2 = AnalogEP2()"
+    "ep2 = AnalogEP2(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ep2.model[0].__name__"
    ]
   },
   {
@@ -364,6 +373,68 @@
     "plt.plot(x, p2, label=\"piecewise linear\")\n",
     "plt.plot(x, p4, label=\"piecewise linear\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Block Cholesky"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a block laplacian matrix\n",
+    "import torch\n",
+    "import torch.linalg as la\n",
+    "\n",
+    "A = torch.randn(3, 3)\n",
+    "Lap = torch.cat(\n",
+    "    [\n",
+    "        torch.cat([torch.diag(A.sum(dim=1)), -A], dim=1),\n",
+    "        torch.cat([-A.T, torch.diag(A.sum(dim=0))], dim=1),\n",
+    "    ],\n",
+    "    dim=0,\n",
+    ")\n",
+    "\n",
+    "def add_to_laplacian(Lap:torch.Tensor, A: torch.Tensor):\n",
+    "    m, n = A.shape\n",
+    "    Lap[:-m,:-n] += torch.diag(A.sum(dim=1)\n",
+    "    return torch.cat(\n",
+    "        [\n",
+    "            torch.cat([torch.diag(A.sum(dim=1)), -A], dim=1),\n",
+    "            torch.cat([-A.T, torch.diag(A.sum(dim=0))], dim=1),\n",
+    "        ],\n",
+    "        dim=0,\n",
+    "    )\n",
+    "\n",
+    "for _ in range(3):\n",
+    "    A = torch.randn(3, 3)\n",
+    "    Lap = add_to_laplacian(Lap, A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li = [1, 2, 3, 4, 5]\n",
+    "li[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li[:2]"
    ]
   },
   {
@@ -656,15 +727,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P @ U2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "C"
    ]
   },
@@ -673,31 +735,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "la.eigvalsh(C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info"
    ]
   },
   {
@@ -822,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
