--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -151,6 +151,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## bias update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "batch_size = 3\n",
+    "nudge_n = torch.rand((batch_size, 5))\n",
+    "free_n = torch.rand((batch_size, 5))\n",
+    "(nudge_n - free_n) * (nudge_n + free_n - 2 * torch.ones_like(free_n))  # (n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = (nudge_n - free_n) * (nudge_n + free_n - 2 * torch.ones_like(free_n))  # (n-1)\n",
+    "res = res.mean(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_nudge_n = torch.mean(nudge_n, dim=0)\n",
+    "mean_free_n = torch.mean(free_n, dim=0)\n",
+    "(mean_nudge_n - mean_free_n) * (\n",
+    "    mean_nudge_n + mean_free_n - 2 * torch.ones_like(mean_free_n)\n",
+    ")  # (n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.inner((nudge_n - free_n), (nudge_n + free_n - 2 * torch.ones_like(free_n)))  # (n-1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## etc"
    ]
   },
@@ -187,7 +250,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "mdl = nn.Linear(1, 1, bias=True)"
    ]
   },
   {
@@ -196,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "li = [torch.rand((2, 1)) for _ in range(5)]"
+    "mdl.bias"
    ]
   },
   {
@@ -205,16 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id(li[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "li[0] = torch.rand((2, 1))"
+    "list(mdl.named_parameters())"
    ]
   },
   {
@@ -297,6 +354,59 @@
    "source": [
     "%run -c python -m foo.py cProfile"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "from src.utils import eqprop_util\n",
+    "\n",
+    "partial_fn = functools.partial(eqprop_util.rectifier_p3_i, Is=1e-6)\n",
+    "scrfn = torch.jit.script(functools.wraps(partial_fn), example_inputs=(torch.rand(2, 3),))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "scrfn(torch.rand(128, 3000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "eqprop_util.rectifier_p3_i(torch.rand(128, 3000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []\n",
+    "not a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -315,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
