Fix: make condition number logging only for weight

--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -419,13 +419,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "li = [1, 2, 3, 4, 5]\n",
-    "li[::-1]"
+    "---"
    ]
   },
   {
@@ -434,7 +431,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "li[:2]"
+    "import torch\n",
+    "\n",
+    "\n",
+    "def block_tri_cholesky(W: list[torch.Tensor]):\n",
+    "    \"\"\"Blockwise cholesky decomposition for a size varying block tridiagonal matrix.\n",
+    "    see spftrf() in LAPACK\n",
+    "\n",
+    "    Args:\n",
+    "        W (List[torch.Tensor]): List of lower triangular blocks.\n",
+    "\n",
+    "    Returns:\n",
+    "        L (List[torch.Tensor]): List of lower triangular blocks.\n",
+    "        C (List[torch.Tensor]): List of diagonal blocks. as column vectors.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    n = len(W)\n",
+    "    C = [torch.zeros_like(W[i]) for i in range(n)]\n",
+    "    L = [None] * (n + 1)\n",
+    "    W.append(0)\n",
+    "    L[0] = torch.cholesky(W[0])\n",
+    "    for i in range(n):\n",
+    "        C[i] = torch.triangular_solve(\n",
+    "            W[i], L[i], upper=False\n",
+    "        ).solution  # C[i] = W[i] @ D_prev^-T, trsm()\n",
+    "        D = W[i + 1] - torch.mm(C[i].t(), C[i])  # D = W[i+1] - C[i] @ C[i]^T, syrk()\n",
+    "        L[i + 1] = torch.cholesky(D)\n",
+    "    return L, C\n",
+    "\n",
+    "\n",
+    "def block_tri_cholesky_solve(L, C, B):\n",
+    "    \"\"\"Blockwise cholesky solve for a size varing block tridiagonal matrix.\n",
+    "\n",
+    "    Args:\n",
+    "        L (List[torch.Tensor]): List of lower triangular blocks.\n",
+    "        C (List[torch.Tensor]): List of diagonal blocks.\n",
+    "        B (torch.Tensor): RHS.\n",
+    "\n",
+    "    Returns:\n",
+    "        X (torch.Tensor): Solution.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    n = len(L)\n",
+    "    X = torch.zeros_like(B)\n",
+    "    for i in range(n):\n",
+    "        X[:, i * C[i].size(-1) : (i + 1) * C[i].size(-1)] = torch.cholesky_solve(\n",
+    "            B[:, i * C[i].size(-1) : (i + 1) * C[i].size(-1)],\n",
+    "            L[i + 1] + torch.mm(C[i].t(), C[i]),\n",
+    "        )\n",
+    "\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "# Your functions here...\n",
+    "\n",
+    "\n",
+    "def generate_block_tridiagonal(n: int, block_size: int) -> List[torch.Tensor]:\n",
+    "    \"\"\"Generate a random block tridiagonal matrix.\"\"\"\n",
+    "    blocks = [torch.randn(block_size, block_size) for _ in range(n)]\n",
+    "    for block in blocks:\n",
+    "        block += block.t()  # Make it symmetric\n",
+    "        block += block_size * torch.eye(block_size)  # Make it positive definite\n",
+    "    return blocks\n",
+    "\n",
+    "\n",
+    "# Generate a random block tridiagonal matrix\n",
+    "n = 5\n",
+    "block_size = 3\n",
+    "blocks = generate_block_tridiagonal(n, block_size)\n",
+    "\n",
+    "# Perform blockwise Cholesky factorization\n",
+    "L, C = block_tri_cholesky(blocks)\n",
+    "\n",
+    "# Generate a random RHS\n",
+    "B = torch.randn(n * block_size)\n",
+    "\n",
+    "# Perform blockwise Cholesky solve\n",
+    "X_block = block_tri_cholesky_solve(L, C, B)\n",
+    "\n",
+    "# Perform standard Cholesky factorization and solve\n",
+    "A = torch.zeros(n * block_size, n * block_size)\n",
+    "for i in range(n):\n",
+    "    A[i * block_size : (i + 1) * block_size, i * block_size : (i + 1) * block_size] = blocks[i]\n",
+    "    if i < n - 1:\n",
+    "        A[\n",
+    "            i * block_size : (i + 1) * block_size, (i + 1) * block_size : (i + 2) * block_size\n",
+    "        ] = blocks[i]\n",
+    "        A[\n",
+    "            (i + 1) * block_size : (i + 2) * block_size, i * block_size : (i + 1) * block_size\n",
+    "        ] = blocks[i]\n",
+    "L_full = torch.cholesky(A)\n",
+    "X_full = torch.cholesky_solve(B.unsqueeze(1), L_full).squeeze()\n",
+    "\n",
+    "# Compare the results\n",
+    "print(\"Blockwise solution:\", X_block)\n",
+    "print(\"Full solution:\", X_full)\n",
+    "print(\"Difference:\", torch.norm(X_block - X_full))"
    ]
   },
   {
@@ -779,47 +881,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "x = torch.rand(1, 1, 8, 8)  # batch size, channels, height, width\n",
-    "\n",
-    "l1 = nn.Conv2d(1, 3, 3, 1, bias=False)  # in_channels, out_channels, kernel_size, stride"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def conv2d(x, w):\n",
-    "    return torch.einsum(\"bchw, oihw -> bco\", x, w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l1.weight.shape"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Laplacian.jl"
    ]
   },
@@ -835,6 +896,64 @@
     "julia.install()\n",
     "j = julia.Julia()\n",
     "j.using(\"LinearAlgebra\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## conv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "x = torch.rand(1, 1, 8, 8)  # batch size, channels, height, width\n",
+    "convlayer = nn.Conv2d(1, 3, 3, 1, bias=False)  # in_channels, out_channels, kernel_size, stride\n",
+    "\n",
+    "\n",
+    "def conv2d(x, w):\n",
+    "    return torch.einsum(\"bchw, oihw -> bco\", x, w)\n",
+    "\n",
+    "\n",
+    "# check if the output is the same\n",
+    "torch.allclose(conv2d(x, convlayer.weight), convlayer(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convlayer(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## maxpool"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "use gumbel trick"
    ]
   },
   {
