--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -223,6 +223,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "lyr1 = nn.Linear(1, 2, bias=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hasattr(lyr1, \"bias\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# plot 3d logsumexp\n",
@@ -425,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   },
   "vscode": {
    "interpreter": {
