Refactor: Move eqprop utils & engine to src.eqprop

--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.components.E_minimizer import _stepsolve2"
+    "from src.eqprop.E_minimizer import _stepsolve2"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ep2 = AnalogEP2(1)"
+    "ep2 = AnalogEP2(batch_size=1)"
    ]
   },
   {
@@ -149,15 +149,6 @@
    "source": [
     "%%timeit\n",
     "ep2.forward(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(ep2.model.named_buffers())"
    ]
   },
   {
@@ -255,13 +246,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# vs Gradient based Solver"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "piv"
+    "# check current python path\n",
+    "pythonpath = !which python\n",
+    "pythonpath[0] == \"/root/miniconda3/envs/torchbase/bin/python\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -980,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
