Refactor: Configure solver related optns

--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -961,7 +961,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# change to avgpool"
+   ]
   },
   {
    "cell_type": "markdown",
