Feat: Add Im2Col model

--- a/eqprop/notebooks/profile.ipynb
+++ b/eqprop/notebooks/profile.ipynb
@@ -24,9 +24,27 @@
     "    for obj in gc.get_objects():\n",
     "        if torch.is_tensor(obj):\n",
     "            obj: torch.Tensor\n",
-    "            print(type(obj), obj.size())\n",
+    "            print(type(obj), obj.size(), obj.device, obj.name)\n",
     "            cnt += 1\n",
     "    print(\"total number of tensors: \", cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memReport()"
    ]
   },
   {
@@ -54,6 +72,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "torch.cuda.memory_usage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cpuStats()"
    ]
   },
@@ -63,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i \"../src/train.py\" \"debug=fdr\" \"trainer.fast_dev_run=100\""
+    "%%capture\n",
+    "%run -i \"../src/train.py\" \"experiment=tinyset\" \"trainer=gpu\" \"trainer.max_epochs=2\" \"trainer.limit_train_batches=0.03\" \"trainer.limit_val_batches=0.03\""
    ]
   },
   {
@@ -119,6 +147,15 @@
    "outputs": [],
    "source": [
     "cpuStats()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(torch.cuda.memory_summary())"
    ]
   },
   {
@@ -206,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
