--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -45,6 +45,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.backends.cudnn.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for buf in mdl.buffers():\n",
     "    print(id(buf))"
    ]
@@ -417,8 +435,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = []\n",
-    "not a"
+    "li = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
+    "li[-2:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Im2Col (nn.Unfold)"
    ]
   },
   {
@@ -426,7 +451,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.models.components.vgg11 import VGG11Im2Col\n",
+    "\n",
+    "model = VGG11Im2Col(\n",
+    "    hidden_channels=tuple((9 * torch.tensor([7, 7 * 2, 7 * 4, 7 * 8, 7 * 9])).tolist())\n",
+    ")\n",
+    "\n",
+    "x = torch.rand((1, 3, 32, 32))\n",
+    "y = model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.models.components.vgg11 import VGG11avg, VGG11Im2Col\n",
+    "\n",
+    "model1 = VGG11Im2Col(\n",
+    "    hidden_channels=tuple((9 * torch.tensor([7, 7 * 2, 7 * 4, 7 * 8, 7 * 9])).tolist())\n",
+    ")\n",
+    "model = VGG11avg(\n",
+    "    hidden_channels=tuple((9 * torch.tensor([7, 7 * 2, 7 * 4, 7 * 8, 7 * 9])).tolist())\n",
+    ")\n",
+    "# x = torch.rand((1, 3, 32, 32))\n",
+    "# y = model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1.hidden_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand((1, 3, 32, 32))\n",
+    "for m in model1.features.children():\n",
+    "    print(m)\n",
+    "    print(x.shape)\n",
+    "    x = m(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "unfold = nn.Unfold(kernel_size=(2, 3))\n",
+    "input = torch.randn(2, 5, 3, 4)\n",
+    "output = unfold(input)\n",
+    "# each patch contains 30 values (2x3=6 vectors, each of 5 channels)\n",
+    "# 4 blocks (2x3 kernels) in total in the 3x4 input\n",
+    "output.size()\n",
+    "\n",
+    "# Convolution is equivalent with Unfold + Matrix Multiplication + Fold (or view to output shape)\n",
+    "inp = torch.randn(1, 3, 10, 12)\n",
+    "w = torch.randn(2, 3, 4, 5)\n",
+    "inp_unf = torch.nn.functional.unfold(inp, (4, 5))\n",
+    "out_unf = inp_unf.transpose(1, 2).matmul(w.view(w.size(0), -1).t()).transpose(1, 2)\n",
+    "out = torch.nn.functional.fold(out_unf, (7, 8), (1, 1))\n",
+    "# or equivalently (and avoiding a copy),\n",
+    "# out = out_unf.view(1, 2, 7, 8)\n",
+    "(torch.nn.functional.conv2d(inp, w) - out).abs().max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# END"
+   ]
   }
  ],
  "metadata": {
@@ -445,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
