Refactor: Add readme & Fix slowdown issue

--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -30,6 +30,7 @@
     "from hydra import compose, initialize\n",
     "from omegaconf import DictConfig, open_dict\n",
     "\n",
+    "\n",
     "def get_cfg():\n",
     "    with initialize(version_base=\"1.2\", config_path=\"../../EP2/configs\"):\n",
     "        cfg = compose(config_name=\"train.yaml\", return_hydra_config=True, overrides=[])\n",
@@ -1077,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Oct 12 2022, 19:14:26) [GCC 9.4.0]"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
